--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,3 +2,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'vue-virtual-scroller/dist/vue-virtual-scroller.css';
+
+::-webkit-scrollbar {
+  @apply w-2 h-2;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply border-2 border-solid border-transparent border-y-4;
+  @apply bg-clip-padding;
+  @apply bg-gray-400;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-corner {
+  @apply hidden;
+}
